--- a/special.html
+++ b/special.html
@@ -68,22 +68,20 @@
 
           <h1 style="background-color:gray;color:white;"><br>We are currently open with the following measures in place:</h1>
 
-          <p style="background-color:gray;color:white;"><br>1. Following all applicable guidelines set
-             forth by local officials and/or health departments.</p>
-          <p style="background-color:gray;color:white;">2. Encouraging everyone to follow the <strong>6 Foot
-          </strong> social distancing guidelines.</p>
-          <p style="background-color:gray;color:white;">3. Allowing only <strong>50</strong> customers 
-             at a time in the store (Phase 2 VA)</p>
-          <p style="background-color:gray;color:white;">4. Placing hand sanitizer units throughout the 
-             store.</p>
-          <p style="background-color:gray;color:white;">5. Increasing the frequency of cleaning and sanitizing
-              all high-traffic common areas with an enhanced focus on all touch points with <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-              CDC-recommended cleaning agents. </p>
+          <ol style="background-color:gray;color:white;">
+              <li>Following all applicable guidelines set forth by local officials and/or health departments.</li>
+              <li>Encouraging everyone to follow the <strong>6 Foot</strong> social distancing guidelines.</li>
+              <li>Allowing only <strong>50</strong> customers at a time in the store (Phase 2 VA)</li>
+              <li>Placing hand sanitizer units throughout the store.</li>
+              <li>Increasing the frequency of cleaning and sanitizing all high-traffic common areas with an enhanced focus on all touch points with CDC-recommended cleaning agents.</li>
+          </ol>
 
-          <p style="background-color:gray;color:white;"><br><Strong>HOURS:</Strong></p>
-          <P style="background-color:gray;color:white;">Mon-Thur: 11AM - 8PM </P>
-          <P style="background-color:gray;color:white;">Fri & Sat: 11AM - 9PM </P>
-          <P style="background-color:gray;color:white;">Sunday: 12PM - 6PM </P>
+          <p style="background-color:gray;color:white;">
+              <Strong>HOURS:</Strong><br>
+              Mon-Thur: 11AM - 8PM<br>
+              Fri & Sat: 11AM - 9PM<br>
+              Sunday: 12PM - 6PM
+          </p>
         </div>
       </main>
 
