--- a/special.html
+++ b/special.html
@@ -66,7 +66,7 @@
         <div class="container mt-5 py-3">
           <h1 class="mt-5">This is our Special Page!</h1>
 
-          <h1 style="background-color:gray;color:white;"><br>We are currently open with the following measures in place:</h1>
+          <h1 style="background-color:gray;color:white;">We are currently open with the following measures in place:</h1>
 
           <ol style="background-color:gray;color:white;">
               <li>Following all applicable guidelines set forth by local officials and/or health departments.</li>
@@ -76,7 +76,7 @@
               <li>Increasing the frequency of cleaning and sanitizing all high-traffic common areas with an enhanced focus on all touch points with CDC-recommended cleaning agents.</li>
           </ol>
 
-          <p style="background-color:gray;color:white;">
+          <p style="background-color:black;color:white;">
               <Strong>HOURS:</Strong><br>
               Mon-Thur: 11AM - 8PM<br>
               Fri & Sat: 11AM - 9PM<br>
