--- a/special.html
+++ b/special.html
@@ -63,7 +63,7 @@
 
 
       <main>
-        <div class="container mt-5 py-3">
+        <div class="container mt-5 pt-3">
           <h1 class="mt-5">This is our Special Page!</h1>
 
           <h1 style="background-color:gray;color:white;">We are currently open with the following measures in place:</h1>
