--- a/special.html
+++ b/special.html
@@ -73,7 +73,8 @@
               <li>Placing hand sanitizer units throughout the store.</li>
               <li>Increasing the frequency of cleaning and sanitizing all high-traffic common areas with an enhanced focus on all touch points with CDC-recommended cleaning agents.</li>
           </ol>
-          <p style="background-color:black;color:white;">
+
+          <p class="container-md" style="background-color:black;color:white;">
               <Strong>HOURS:</Strong><br>
               Mon-Thur: 11AM - 8PM<br>
               Fri & Sat: 11AM - 9PM<br>
