--- a/hours.html
+++ b/hours.html
@@ -64,14 +64,14 @@
 
 
 
-    <main>
+    <main class="mb-5 pb-3">
       <div class="container mt-5 py-3">
         <style>
             background-color: blue;
         </style>
         <h1 class="mt-5" style="color:white;">Welcome to the Hours page!</h1>
         
-        <p style="background-color:gray;color:white;">
+        <p class="container-md" style="background-color:gray;color:white;">
             <strong>Our Current Operating Hours Are:</strong><br>
             <strong>Mon-Thur 11AM - 8PM </strong><br>
             <strong>Fri & Sat: 11AM - 9PM </strong><br>
