--- a/special.html
+++ b/special.html
@@ -62,7 +62,7 @@
       </style>
 
 
-      <main>
+      <main class="mb-5 pb-3">
         <div class="container mt-5 pt-3">
           <h1 class="mt-5">This is our Special Page!</h1>
           <h1 style="background-color:gray;color:white;">We are currently open with the following measures in place:</h1>
