--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <title>The VR Center!</title>
   </head>
-  <body>
+  <body style="height: auto;">
     <div class="container" id="navbar">
     <nav class="navbar navbar-pills navbar-expand-lg navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
@@ -70,7 +70,7 @@
     </main>
 
     <div id="footbar">
-    <footer class="bg-dark d-flex flex-wrap justify-content-between align-items-center py-3">
+    <footer class="fixed-bottom bg-dark d-flex flex-wrap justify-content-between align-items-center py-3">
         <div class="col-md-4 d-flex align-items-center">
           <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
             <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
