--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       }
     </style>
 
-    <main class="pb-5">
+    <main class="mb-5 pb-5">
         <div class="container mt-5 py-3">
           <h1>THE VR CENTER OFFERS ONE OF THE MOST UNIQUE GAMING EXPERIENCES IN ROANOKE, VA.</h1>
           <p class="lead">Founded in 2016, The VR Center is a fully fledged arcade with rides, games, candy, merch, and more. We have Xbox's, PlayStations (including the all new PlayStation 5), and PC's with traditional keyboard and mouse games. Our headlining attractions (and probably the reason you are here) are our high-tech virtual reality rides and games. We have Oculus and HTC VIVE headsets, virtual reality pods with roller coasters, adventure rides, and first person shooters. With a vast library of games and experiences, a trip to The VR Center is truly a trip to another world!</p>
